# erpegobotek

./: Makefile  README.md  example.env  pyproject.toml
docker/: Dockerfile  Dockerfile.test  docker-compose.test.yaml  docker-compose.yaml
erpegobotek/bot/discord/: __main__.py  bot.py  config.py  exceptions.py
erpegobotek/bot/discord/handlers/: base.py  decorators.py  dice_roll_handlers.py  test.py
erpegobotek/domain/dice_roll/: config.py  dice_roller.py  dices.py  exceptions.py
erpegobotek/services/: dice_roll.py
tests/: test_erpegobotek.py
