[tool.poetry]
name = "erpegobotek"
version = "0.1.0"
description = ""
authors = ["15bubbles <15bubbles.15bubbles@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.6.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
autoflake = "^1.4"
pytest = "^5.2"
pytest-mock = "^3.5.1"
pytest-black = "^0.3.12"
pytest-pylint = "^0.18.0"
pytest-cov = "^2.11.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
line_length = 110
include_trailing_comma = true

[tool.pylint]
init-hook = "import sys; sys.path.append('.')"
load-plugins = "pylint-django"

[tool.pylint.messages_control]
max-line-length = 110
ignore = "models"
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring,raise-missing-from,redefined-builtin"
good-names="q,healthcheck,id"

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "pytest-mock"
addopts = "--color=yes --code-highlight=yes"
python_files = "tests.py test_*.py *_tests.py"

[tool.coverage.run]
source = "."
omit = "tests"

[tool.coverage.report]
skip_empty = true

[tool.coverage.xml]
output = "coverage_report.xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
